# pyannote-audio

./: .gitignore  CMakeLists.txt  README.md
cpp/: CMakeLists.txt
cpp/scripts/: eval_callhome_cpp_vs_python.py
cpp/src/: annotation_support.h  clustering_vbx.cpp  clustering_vbx.h  community1_cpp_annote_embedded.cpp  community1_cpp_annote_embedded.h  compute_fbank.cpp  compute_fbank.h  cpp-annote-engine.h  cpp-annote-streaming.cpp  cpp-annote-streaming.h  cpp-annote.cpp  cpp-annote.h  embedding_ort_infer.cpp  embedding_ort_infer.h  filter_train.cpp  filter_train.h  hungarian.h  parity_log.cpp  parity_log.h  plda_vbx.cpp  plda_vbx.h  scipy_linkage.cpp  scipy_linkage.h  wav_pcm_float32.h
cpp/tests/: annotation_golden_test.cpp  clustering_golden_test.cpp  embedding_golden_test.cpp  filter_ahc_golden_test.cpp  linkage_fcluster_golden_test.cpp  plda_fea_golden_test.cpp  reconstruct_golden_test.cpp  speaker_count_golden_test.cpp  vbx_parity_test.cpp
cpp/tools/: cpp-annote-cli.cpp
scripts/: eval_callhome_cpp_vs_python.py
